# flet-vendas

./: LICENSE  README.md  pyproject.toml
src/: globals.py  main.py  storage_manager.py
src/database/: clientes_controller.py  estoque_controller.py  fornecedores_controller.py  funcionarios_controller.py  produtos_controller.py  vendas_controller.py
src/routes/: cadastro_login.py  cadastro_vendas.py  clientes.py  configuracoes.py  estoque.py  fornecedores.py  funcionarios.py  home.py  login.py  produtos.py  relatorios.py  vendas.py
