[project]
name = "appteste"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet==0.27.6",
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0"
]

[tool.flet]
org = "com.mycompany"
product = "appteste"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[project.scripts]
appteste = "src.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=3.0.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}
pytest = "^7.0.0"
pytest-mock = "^3.0.0"
pytest-cov = "^3.0.0"